syntax = "proto3";

option csharp_namespace = "Core_gRPC_UnaryTemplate_Client";

package message;
 
 
service message {
  rpc GetMessage(MessageRequest) returns (MessageResponse);
}
message MessageRequest {
  string message = 1;
}
message MessageResponse {
  string message = 1;
}